# qoriq-debug

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.sub  configure  configure.ac
qoriq-common/: Makefile.am  Makefile.in  ccsr_bman_v2.h  ccsr_devcfg_v2.h  ccsr_fman_v1.h  ccsr_qman_v1.h  ccsr_qman_v2.h  ccsr_rcpm_v2.h  common.h  dcsr_corenet_v1.h  dcsr_cpu_v1.h  dcsr_dpaa_v1.h  dcsr_epu_v1.h  dcsr_npc_v1.h  dcsr_npc_v2.h  dcsr_nxc_v1.h  dcsr_nxc_v2.h  dcsr_ocn_v1.h  dcsr_rcpm_v2.h  pmr_cpu_v1.h
qoriq-common/test/: Makefile.am  Makefile.in  gen_testmasks  utest.c
qoriq-dbg/: Makefile.am  Makefile.in  README
qoriq-dbg/module/: Makefile.in  README  ccsr_bman.c  ccsr_bman.h  ccsr_devcfg.c  ccsr_devcfg.h  ccsr_fman.c  ccsr_fman.h  ccsr_qman.c  ccsr_qman.h  ccsr_rcpm.c  ccsr_rcpm.h  dbg_cpu.c  dbg_cpu.h  dbg_device.h  dbg_perfmon.c  dbg_perfmon.h  dbg_pmr.c  dbg_pmr.h  dbg_pmr_table.c  dbg_private.h  dbg_spr.c  dbg_spr.h  dbg_spr_table.c  dcsr_corenet.c  dcsr_corenet.h  dcsr_ddr.c  dcsr_ddr.h  dcsr_dpaa.c  dcsr_dpaa.h  dcsr_epu.c  dcsr_epu.h  dcsr_nal.c  dcsr_nal.h  dcsr_npc.c  dcsr_npc.h  dcsr_npc_trace.c  dcsr_npc_trace.h  dcsr_nxc.c  dcsr_nxc.h  (+6 more)
