#
# Copyright (C) 2010, 2011, 2012 Freescale Semiconductor, Inc.
#
# All uses are subject to a SEPARATE license agreement from Freescale Semiconductor
# or its authorized licensees. 
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
# OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN
# NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
# TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
# LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
# NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

SUBDIRS= \
	test
	
EXTRA_DIST= \
	ccsr_fman_v1.h \
	ccsr_qman_v1.h \
	common.h \
	dcsr_corenet_v1.h \
	dcsr_cpu_v1.h \
	dcsr_ddr_v1.h \
	dcsr_dpaa_v1.h \
	dcsr_epu_v1.h \
	dcsr_nal_v1.h \
	dcsr_npc_v1.h \
	dcsr_nxc_v1.h \
	dcsr_ocn_v1.h \
	dcsr_rcpm_v1.h \
	pmr_cpu_v1.h
