#
# Copyright (C) 2010, 2011, 2012, 2013 Freescale Semiconductor, Inc.
# All rights reserved.
#
# This software may be distributed under the terms of the
# GNU General Public License ("GPL") as published by the Free Software
# Foundation, either version 2 of that License or (at your option) any
# later version.
#
# THIS SOFTWARE IS PROVIDED BY Freescale Semiconductor ``AS IS'' AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL Freescale Semiconductor BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
# THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#

SUBDIRS= \
	module
	
EXTRA_DIST = \
	module/Makefile.in \
	module/ccsr_bman.c \
	module/ccsr_bman.h \
	module/ccsr_fman.c \
	module/ccsr_fman.h \
	module/ccsr_qman.c \
	module/ccsr_qman.h \
	module/dbg_cpu.c \
	module/dbg_cpu.h \
	module/dbg_device.h \
	module/dbg_pmr.c \
	module/dbg_pmr.h \
	module/dbg_private.h \
	module/dbg_spr.c \
	module/dbg_spr.h \
	module/dcsr_corenet.c \
	module/dcsr_corenet.h \
	module/dcsr_ddr.c \
	module/dcsr_ddr.h \
	module/dcsr_dpaa.c \
	module/dcsr_dpaa.h \
	module/dcsr_epu.c \
	module/dcsr_epu.h \
	module/dcsr_nal.c \
	module/dcsr_nal.h \
	module/dcsr_npc.c \
	module/dcsr_npc.h \
	module/dcsr_npc_trace.c \
	module/dcsr_npc_trace.h \
	module/dcsr_nxc.c \
	module/dcsr_nxc.h \
	module/dcsr_ocn.c \
	module/dcsr_ocn.h \
	module/dcsr_rcpm.c \
	module/dcsr_rcpm.h \
	module/qoriq_dbg.c \
	module/qoriq_dbg.h \
	module/README
